add tolerance display

--- a/resistor.html
+++ b/resistor.html
@@ -62,11 +62,12 @@
             </div>
 
             <div class='row results'>
-              <div class='col-sm-4' style='text-align:center;'>
-                <div id='resistor-value' style='font-size:5em;'>2.4K &#937;</div>
+              <div class='col-lg-4' style='text-align:center;'>
+                <span id='resistor-value' style='font-size:5em;'>2.4K &#937;</span>
+                <span id='resistor-tol' style='font-size:2.5em;line-height: 3.5em;margin-left:10px;'>&#177;5%</span>
               </div>
 
-              <div class='col-sm-8'>
+              <div class='col-lg-8'>
                 <div class='row band-container'>
                   <div class='col-xs-1'></div>
 
