--- a/resistor.html
+++ b/resistor.html
@@ -28,17 +28,17 @@
       <div role="tabpanel">
         <!-- Nav tabs -->
         <ul class="nav nav-pills nav-justified" role="tablist">
-          <li role="presentation" class="active"><a href="#c2v" aria-controls="c2v" role="tab" data-toggle="pill">
-            Value &#8594; Color
-          </a></li>
-          <li role="presentation"><a href="#v2c" aria-controls="v2c" role="tab" data-toggle="pill">
+          <li role="presentation" class="active"><a href="#v2c" aria-controls="v2c" role="tab" data-toggle="pill">
             Color &#8594; Value
+          </a></li>
+          <li role="presentation" ><a href="#c2v" aria-controls="c2v" role="tab" data-toggle="pill">
+            Value &#8594; Color
           </a></li>
         </ul>
 
         <!-- Tab panes -->
         <div class="tab-content">
-          <div role="tabpanel" class="tab-pane active" id="c2v">
+          <div role="tabpanel" class="tab-pane" id="c2v">
             <div class='row'>
               <div class='col-xs-12'>
 
@@ -61,7 +61,79 @@
               </div>
             </div>
 
-            <div class='row results'>
+            
+          </div>
+
+          <div role="tabpanel" class="tab-pane active" id="v2c">
+            <div class='row'>
+              <div class='col-xs-12'>
+
+
+                <form id='v2c-form'>
+                  <div class='input-group'>
+                    <div class="input-group-btn">
+                      <select class="form-control input-lg color-selector" id="v2c-color1">
+                        <option value='0' selected="selected" style='background-color:black; color:white;'>Black (0)</option>
+                        <option value='1' style='background-color:brown; color:white;'>Brown (1)</option>
+                        <option value='2' style='background-color:red; color:white;'>Red (2)</option>
+                        <option value='3' style='background-color:orange; color:white;'>Orange (3)</option>
+                        <option value='4' style='background-color:yellow; color:#333;'>Yellow (4)</option>
+                        <option value='5' style='background-color:green; color:white;'>Green (5)</option>
+                        <option value='6' style='background-color:blue; color:white;'>Blue (6)</option>
+                        <option value='7' style='background-color:purple; color:white;'>Violet (7)</option>
+                        <option value='8' style='background-color:grey; color:white;'>Grey (8)</option>
+                        <option value='9' style='background-color:white; color:#333;'>White (9)</option>
+                      </select>
+                    </div>
+
+                    <div class="input-group-btn">
+                      <select class="form-control input-lg color-selector" id="v2c-color2">
+                        <option value='0' selected="selected" style='background-color:black; color:white;'>Black (0)</option>
+                        <option value='1' style='background-color:brown; color:white;'>Brown (1)</option>
+                        <option value='2' style='background-color:red; color:white;'>Red (2)</option>
+                        <option value='3' style='background-color:orange; color:white;'>Orange (3)</option>
+                        <option value='4' style='background-color:yellow; color:#333;'>Yellow (4)</option>
+                        <option value='5' style='background-color:green; color:white;'>Green (5)</option>
+                        <option value='6' style='background-color:blue; color:white;'>Blue (6)</option>
+                        <option value='7' style='background-color:purple; color:white;'>Violet (7)</option>
+                        <option value='8' style='background-color:grey; color:white;'>Grey (8)</option>
+                        <option value='9' style='background-color:white; color:#333;'>White (9)</option>
+                      </select>
+                    </div>
+
+                    <div class="input-group-btn">
+                      <select class="form-control input-lg color-selector" id="v2c-multiplier">
+                        <option value='1' selected="selected" style='background-color:black; color:white;'>Black (1)</option>
+                        <option value='10' style='background-color:brown; color:white;'>Brown (10)</option>
+                        <option value='100' style='background-color:red; color:white;'>Red (100)</option>
+                        <option value='1000' style='background-color:orange; color:white;'>Orange (1,000)</option>
+                        <option value='10000' style='background-color:yellow; color:#333;'>Yellow (10,000)</option>
+                        <option value='100000' style='background-color:green; color:white;'>Green (100,000)</option>
+                        <option value='1000000' style='background-color:blue; color:white;'>Blue (1,000,000)</option>
+                        <option value='10000000' style='background-color:purple; color:white;'>Violet (10,000,000)</option>
+                      </select>
+                    </div>
+
+                    <div class="input-group-btn">
+                      <select class="form-control input-lg color-selector" id="v2c-tolerance">
+                        <option value='10' style='background-color:silver; color:white;'>Silver (&#177;10%)</option>
+                        <option value='5' style='background-color:gold; color:#333;'>Gold (&#177;5%)</option>
+                        <option value='1' style='background-color:brown; color:white;'>Brown (&#177;1%)</option>
+                      </select>
+                    </div>
+
+                    <div class="input-group-btn">
+                      <button id='v2c-submit' type='submit' class="btn btn-lg btn-default" style='width:100%;'>Calculate</button>
+                    </div>
+                  </div>
+                </form>
+
+
+              </div>
+            </div>
+          </div>
+
+          <div class='row results'>
               <div class='col-lg-4' style='text-align:center;'>
                 <span id='resistor-value' style='font-size:5em;'>2.4K &#937;</span>
                 <span id='resistor-tol' style='font-size:2.5em;line-height: 3.5em;margin-left:10px;'>&#177;5%</span>
@@ -97,20 +169,8 @@
                 </div>
               </div>
             </div>
-          </div>
 
-          <div role="tabpanel" class="tab-pane" id="v2c">
-            <div class='row'>
-              <div class='col-xs-12'>
-                Coming soon
-                <!-- <select style='background-color:blue;color:white'>
-                  <option value="1" style='background-color:red'>One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                </select> -->
-              </div>
-            </div>
-          </div>
+            
         </div>
       </div>
 
