--- a/resistor.html
+++ b/resistor.html
@@ -18,81 +18,91 @@
   </head>
   <body>
     <div class='container'>
-      <h1>Resistor Calculator</h1>
+      <header>
+        <h1>Resistor Calculator</h1>
+      </header>
 
-      <div class='row'>
-        <div class='col-xs-12'>
-          <div class="input-group">
-            <form id='resistor-form'>
-              <input type="text" class="form-control input-superlg" id='resistor-value'>
-            </form>
-            <span class="input-group-addon input-superlg">&#937;</span>
+      <div id='resistor-tool'>
+        <div class='row input-row'>
+          <div class='col-xs-12'>
+            <div class="input-group">
+              <form id='resistor-form'>
+                <input type="text" class="form-control input-superlg" id='resistor-value'>
+              </form>
+              <span class="input-group-addon input-superlg">&#937;</span>
+            </div>
+          </div>
+        </div>
+
+        <div class='row no-gutters'>
+          <div class='col-md-3'>
+            <select class="form-control input-verylg color-selector" id="band1">
+              <option value='1' selected="selected" style='background-color:brown; color:white;'>Brown (1)</option>
+              <option value='2' style='background-color:red; color:white;'>Red (2)</option>
+              <option value='3' style='background-color:orange; color:white;'>Orange (3)</option>
+              <option value='4' style='background-color:yellow; color:#333;'>Yellow (4)</option>
+              <option value='5' style='background-color:green; color:white;'>Green (5)</option>
+              <option value='6' style='background-color:blue; color:white;'>Blue (6)</option>
+              <option value='7' style='background-color:purple; color:white;'>Violet (7)</option>
+              <option value='8' style='background-color:grey; color:white;'>Grey (8)</option>
+              <option value='9' style='background-color:white; color:#333;'>White (9)</option>
+            </select>
+          </div>
+          <div class='col-md-3'>
+            <select class="form-control input-verylg color-selector" id="band2">
+              <option value='0' selected="selected" style='background-color:black; color:white;'>Black (0)</option>
+              <option value='1' style='background-color:brown; color:white;'>Brown (1)</option>
+              <option value='2' style='background-color:red; color:white;'>Red (2)</option>
+              <option value='3' style='background-color:orange; color:white;'>Orange (3)</option>
+              <option value='4' style='background-color:yellow; color:#333;'>Yellow (4)</option>
+              <option value='5' style='background-color:green; color:white;'>Green (5)</option>
+              <option value='6' style='background-color:blue; color:white;'>Blue (6)</option>
+              <option value='7' style='background-color:purple; color:white;'>Violet (7)</option>
+              <option value='8' style='background-color:grey; color:white;'>Grey (8)</option>
+              <option value='9' style='background-color:white; color:#333;'>White (9)</option>
+            </select>
+          </div>
+          <div class='col-md-3'>
+            <select class="form-control input-verylg color-selector" id="multiplier">
+              <option value='0.01' style='background-color:silver; color:white;'>Silver (0.01)</option>
+              <option value='0.1' style='background-color:gold; color:#333;'>Gold (0.1)</option>
+              <option value='1' selected="selected" style='background-color:black; color:white;'>Black (1)</option>
+              <option value='10' style='background-color:brown; color:white;'>Brown (10)</option>
+              <option value='100' style='background-color:red; color:white;'>Red (100)</option>
+              <option value='1000' style='background-color:orange; color:white;'>Orange (1,000)</option>
+              <option value='10000' style='background-color:yellow; color:#333;'>Yellow (10,000)</option>
+              <option value='100000' style='background-color:green; color:white;'>Green (100,000)</option>
+              <option value='1000000' style='background-color:blue; color:white;'>Blue (1,000,000)</option>
+              <option value='10000000' style='background-color:purple; color:white;'>Violet (10,000,000)</option>
+            </select>
+          </div>
+          <div class='col-md-1 hidden-xs hidden-sm'>
+            <div class='mg-lg-spacer'></div>
+          </div>
+          <div class='col-md-1 hidden-lg hidden-md'>
+            <hr>
+          </div>
+          <div class='col-md-2'>
+            <select class="form-control input-verylg color-selector" id="tolerance">
+              <option value='20' style='background-color:white; color:#333;'>&#177;20%</option>
+              <option value='10' style='background-color:silver; color:white;'>&#177;10%</option>
+              <option value='5' style='background-color:gold; color:#333;'>&#177;5%</option>
+              <option value='2' style='background-color:red; color:white;'>&#177;2%</option>
+              <option value='1' style='background-color:brown; color:white;'>&#177;1%</option>
+              <option value='0.5' style='background-color:green; color:white;'>&#177;0.5%</option>
+              <option value='0.25' style='background-color:blue; color:white;'>&#177;0.25%</option>
+              <option value='0.1' style='background-color:purple; color:white;'>&#177;0.1%</option>
+              <option value='0.05' style='background-color:grey; color:white;'>&#177;0.05%</option>
+            </select>
           </div>
         </div>
       </div>
 
-      <div class='row no-gutters'>
-        <div class='col-md-3'>
-          <select class="form-control input-verylg color-selector" id="band1">
-            <option value='1' selected="selected" style='background-color:brown; color:white;'>Brown (1)</option>
-            <option value='2' style='background-color:red; color:white;'>Red (2)</option>
-            <option value='3' style='background-color:orange; color:white;'>Orange (3)</option>
-            <option value='4' style='background-color:yellow; color:#333;'>Yellow (4)</option>
-            <option value='5' style='background-color:green; color:white;'>Green (5)</option>
-            <option value='6' style='background-color:blue; color:white;'>Blue (6)</option>
-            <option value='7' style='background-color:purple; color:white;'>Violet (7)</option>
-            <option value='8' style='background-color:grey; color:white;'>Grey (8)</option>
-            <option value='9' style='background-color:white; color:#333;'>White (9)</option>
-          </select>
+      <footer>
+        <div class='pull-right sig'>
+          <h5> by <a href='https://www.github.com/epbarger'>epbarger</a> </h5>
         </div>
-        <div class='col-md-3'>
-          <select class="form-control input-verylg color-selector" id="band2">
-            <option value='0' selected="selected" style='background-color:black; color:white;'>Black (0)</option>
-            <option value='1' style='background-color:brown; color:white;'>Brown (1)</option>
-            <option value='2' style='background-color:red; color:white;'>Red (2)</option>
-            <option value='3' style='background-color:orange; color:white;'>Orange (3)</option>
-            <option value='4' style='background-color:yellow; color:#333;'>Yellow (4)</option>
-            <option value='5' style='background-color:green; color:white;'>Green (5)</option>
-            <option value='6' style='background-color:blue; color:white;'>Blue (6)</option>
-            <option value='7' style='background-color:purple; color:white;'>Violet (7)</option>
-            <option value='8' style='background-color:grey; color:white;'>Grey (8)</option>
-            <option value='9' style='background-color:white; color:#333;'>White (9)</option>
-          </select>
-        </div>
-        <div class='col-md-3'>
-          <select class="form-control input-verylg color-selector" id="multiplier">
-            <option value='0.01' style='background-color:silver; color:white;'>Silver (0.01)</option>
-            <option value='0.1' style='background-color:gold; color:#333;'>Gold (0.1)</option>
-            <option value='1' selected="selected" style='background-color:black; color:white;'>Black (1)</option>
-            <option value='10' style='background-color:brown; color:white;'>Brown (10)</option>
-            <option value='100' style='background-color:red; color:white;'>Red (100)</option>
-            <option value='1000' style='background-color:orange; color:white;'>Orange (1,000)</option>
-            <option value='10000' style='background-color:yellow; color:#333;'>Yellow (10,000)</option>
-            <option value='100000' style='background-color:green; color:white;'>Green (100,000)</option>
-            <option value='1000000' style='background-color:blue; color:white;'>Blue (1,000,000)</option>
-            <option value='10000000' style='background-color:purple; color:white;'>Violet (10,000,000)</option>
-          </select>
-        </div>
-        <div class='col-md-1 hidden-xs hidden-sm'>
-          <div class='mg-lg-spacer'></div>
-        </div>
-        <div class='col-md-1 hidden-lg hidden-md'>
-          <hr>
-        </div>
-        <div class='col-md-2'>
-          <select class="form-control input-verylg color-selector" id="tolerance">
-            <option value='20' style='background-color:white; color:#333;'>&#177;20%</option>
-            <option value='10' style='background-color:silver; color:white;'>&#177;10%</option>
-            <option value='5' style='background-color:gold; color:#333;'>&#177;5%</option>
-            <option value='2' style='background-color:red; color:white;'>&#177;2%</option>
-            <option value='1' style='background-color:brown; color:white;'>&#177;1%</option>
-            <option value='0.5' style='background-color:green; color:white;'>&#177;0.5%</option>
-            <option value='0.25' style='background-color:blue; color:white;'>&#177;0.25%</option>
-            <option value='0.1' style='background-color:purple; color:white;'>&#177;0.1%</option>
-            <option value='0.05' style='background-color:grey; color:white;'>&#177;0.05%</option>
-          </select>
-        </div>
-      </div>
+      </footer>
 
     </div>
   </body>
