remove details for now, add link to explanation, fix duplicate errors

--- a/resistor.html
+++ b/resistor.html
@@ -20,7 +20,7 @@
     <div class='container'>
       <header>
         <h1>Resistor Calculator</h1>
-        basic 4 band code calculator
+        basic 4 band code calculator (<a href="http://www.allaboutcircuits.com/textbook/reference/chpt-2/resistor-color-codes/">?</a>)
       </header>
 
       <div id='resistor-tool'>
@@ -88,42 +88,20 @@
               <option value='20' style='background-color:white; color:#333;'>&#177;20%</option>
               <option value='10' style='background-color:silver; color:white;'>&#177;10%</option>
               <option value='5' style='background-color:gold; color:#333;'>&#177;5%</option>
-              <option value='2' style='background-color:red; color:white;'>&#177;2%</option>
+<!--               <option value='2' style='background-color:red; color:white;'>&#177;2%</option>
               <option value='1' style='background-color:brown; color:white;'>&#177;1%</option>
               <option value='0.5' style='background-color:green; color:white;'>&#177;0.5%</option>
               <option value='0.25' style='background-color:blue; color:white;'>&#177;0.25%</option>
               <option value='0.1' style='background-color:purple; color:white;'>&#177;0.1%</option>
-              <option value='0.05' style='background-color:grey; color:white;'>&#177;0.05%</option>
+              <option value='0.05' style='background-color:grey; color:white;'>&#177;0.05%</option> -->
             </select>
           </div>
         </div>
       </div>
 
-      <a id='show-details' href='#'>▼ show details</a>
-      <a id='hide-details' class='hide' href='#'>▲ hide details</a>
-
-      <div class='pull-right sig hidden-sm hidden-xs'>
+      <div class='pull-right sig'>
         by <a href='https://www.github.com/epbarger'>epbarger</a>
       </div>
-
-      <div class='row'>
-        <div class='col-md-8 details'>
-          <div id='input-parse-details'>
-            <p>form input: <span class='detail-span' id='ipt'></span></p>
-            <p>value parsed as: <span class='detail-span' id='vpa'></span></p>
-            <p>value sanitized to: <span class='detail-span' id='vst'></span></p>
-          </div>
-          <p>nearest e12 series: <span class='detail-span' id='ne12'>coming soon</span></p>
-          <p>nearest e24 series: <span class='detail-span' id='ne24'>coming soon</span></p>
-        </div>
-
-        <div class='col-md-4 hidden-md hidden-lg' id='signature-column'>
-          <div class='pull-right sig'>
-            by <a href='https://www.github.com/epbarger'>epbarger</a>
-          </div>
-        </div>
-      </div>
-
 
     </div>
   </body>
