brand that shit sucka

--- a/resistor.html
+++ b/resistor.html
@@ -14,12 +14,12 @@
     <link rel="stylesheet" href="resistor.css">
     <script src="resistor.js"></script>
 
-    <title>Resistor Calculator</title>
+    <title>ResistorCalc.net</title>
   </head>
   <body>
     <div class='container'>
       <header>
-        <h1>Resistor Calculator</h1>
+        <h1>ResistorCalc.net</h1>
         basic 4 band code calculator (<a href="http://www.allaboutcircuits.com/textbook/reference/chpt-2/resistor-color-codes/">?</a>)
       </header>
 
