--- a/resistor.html
+++ b/resistor.html
@@ -15,6 +15,8 @@
     <script src="resistor.js"></script>
 
     <title>ResistorCalc.net</title>
+    <meta name="description" content="Mobile friendly four band resistor calculator for hobbyists and professionals"/>
+    <meta name="keywords" content="resistor calculator, resister calculator, resistor, resister, resistor color, resistor color code, resistor color bands"/>
   </head>
   <body>
     <div class='container'>
