show parse value

--- a/resistor.html
+++ b/resistor.html
@@ -34,8 +34,10 @@
                 <input type="text" class="form-control input-superlg" id='resistor-value'>
               </form>
               <span class="input-group-addon input-superlg">&#937;</span>
-
             </div>
+            <span class='label label-default' id='details-string'>
+              interpreted as <span id='sanitized-value'></span>
+            </span>
           </div>
         </div>
 
