--- a/resistor.html
+++ b/resistor.html
@@ -29,8 +29,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon-180x180.png?v=2">
     <!-- <link rel="icon" type="image/png" href="icons/favicon-32x32.png?v=2" sizes="32x32"> -->
     <!-- <link rel="icon" type="image/png" href="icons/android-chrome-192x192.png?v=2" sizes="192x192"> -->
-<!--     <link rel="icon" type="image/png" href="icons/favicon-96x96.png?v=2" sizes="96x96">
-    <link rel="icon" type="image/png" href="icons/favicon-16x16.png?v=3" sizes="16x16"> -->
+    <!-- <link rel="icon" type="image/png" href="icons/favicon-96x96.png?v=2" sizes="96x96"> -->
+    <!-- <link rel="icon" type="image/png" href="icons/favicon-16x16.png?v=3" sizes="16x16"> -->
     <link rel="icon" type="image/png" href="/nope.png" sizes="16x16">
     <link rel="manifest" href="icons/manifest.json?v=2">
     <meta name="theme-color" content="#2c2c2c">
@@ -39,7 +39,7 @@
     <div class='container'>
       <header>
         <h1>ResistorCalc.net</h1>
-        basic 4 band code calculator(<a href="http://www.allaboutcircuits.com/textbook/reference/chpt-2/resistor-color-codes/">?</a>)
+        <!-- four band code calculator(<a href="http://www.allaboutcircuits.com/textbook/reference/chpt-2/resistor-color-codes/">?</a>) -->
       </header>
 
       <div id='resistor-tool'>
@@ -47,11 +47,11 @@
           <div class='col-xs-12'>
             <div class="input-group">
               <form id='resistor-form'>
-                <input type="text" class="form-control input-superlg" id='resistor-value'>
+                <input type="text" class="form-control input-superlg" id='resistor-value' value='4.7K &PlusMinus; 5%'>
               </form>
               <span class="input-group-addon input-superlg">&#937;</span>
             </div>
-            <span class='label label-default' id='details-string'>
+            <span id='details-string'>
               interpreted as <span id='sanitized-value'></span>
             </span>
           </div>
@@ -61,10 +61,10 @@
           <div class='col-md-3'>
             <div class='dropdown-arrow'> ▼ </div>
             <select class="form-control input-verylg color-selector" id="band1">
-              <option value='1' selected="selected" style='background-color:brown; color:white;'>Brown (1)</option>
+              <option value='1' style='background-color:brown; color:white;'>Brown (1)</option>
               <option value='2' style='background-color:red; color:white;'>Red (2)</option>
               <option value='3' style='background-color:orange; color:white;'>Orange (3)</option>
-              <option value='4' style='background-color:yellow; color:#333;'>Yellow (4)</option>
+              <option value='4' selected="selected" style='background-color:yellow; color:#333;'>Yellow (4)</option>
               <option value='5' style='background-color:green; color:white;'>Green (5)</option>
               <option value='6' style='background-color:blue; color:white;'>Blue (6)</option>
               <option value='7' style='background-color:purple; color:white;'>Violet (7)</option>
@@ -75,14 +75,14 @@
           <div class='col-md-3'>
             <div class='dropdown-arrow'> ▼ </div>
             <select class="form-control input-verylg color-selector" id="band2">
-              <option value='0' selected="selected" style='background-color:black; color:white;'>Black (0)</option>
+              <option value='0' style='background-color:black; color:white;'>Black (0)</option>
               <option value='1' style='background-color:brown; color:white;'>Brown (1)</option>
               <option value='2' style='background-color:red; color:white;'>Red (2)</option>
               <option value='3' style='background-color:orange; color:white;'>Orange (3)</option>
               <option value='4' style='background-color:yellow; color:#333;'>Yellow (4)</option>
               <option value='5' style='background-color:green; color:white;'>Green (5)</option>
               <option value='6' style='background-color:blue; color:white;'>Blue (6)</option>
-              <option value='7' style='background-color:purple; color:white;'>Violet (7)</option>
+              <option value='7' selected="selected" style='background-color:purple; color:white;'>Violet (7)</option>
               <option value='8' style='background-color:grey; color:white;'>Grey (8)</option>
               <option value='9' style='background-color:white; color:#333;'>White (9)</option>
             </select>
@@ -92,9 +92,9 @@
             <select class="form-control input-verylg color-selector" id="multiplier">
               <option value='0.01' style='background-color:silver; color:white;'>Silver (0.01)</option>
               <option value='0.1' style='background-color:gold; color:#333;'>Gold (0.1)</option>
-              <option value='1' selected="selected" style='background-color:black; color:white;'>Black (1)</option>
+              <option value='1' style='background-color:black; color:white;'>Black (1)</option>
               <option value='10' style='background-color:brown; color:white;'>Brown (10)</option>
-              <option value='100' style='background-color:red; color:white;'>Red (100)</option>
+              <option value='100' selected="selected" style='background-color:red; color:white;'>Red (100)</option>
               <option value='1000' style='background-color:orange; color:white;'>Orange (1,000)</option>
               <option value='10000' style='background-color:yellow; color:#333;'>Yellow (10,000)</option>
               <option value='100000' style='background-color:green; color:white;'>Green (100,000)</option>
@@ -113,7 +113,7 @@
             <select class="form-control input-verylg color-selector" id="tolerance">
               <option value='20' style='background-color:white; color:#333;'>&#177;20%</option>
               <option value='10' style='background-color:silver; color:white;'>&#177;10%</option>
-              <option value='5' style='background-color:gold; color:#333;'>&#177;5%</option>
+              <option value='5' selected="selected" style='background-color:gold; color:#333;'>&#177;5%</option>
             </select>
           </div>
         </div>
