--- a/resistor.html
+++ b/resistor.html
@@ -15,7 +15,7 @@
     <title>ResistorCalc.net</title>
     <meta name="description" content="Mobile friendly four band resistor calculator for hobbyists and professionals"/>
     <meta name="keywords" content="resistor calculator, resister calculator, resistor, resister, resistor color, resistor color code, resistor color bands"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1" />
 
     <!-- Generated with realfavicongenerator.com -->
     <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-touch-icon-57x57.png?v=2">
@@ -47,7 +47,7 @@
           <div class='col-xs-12'>
             <div class="input-group">
               <form id='resistor-form'>
-                <input type="text" class="form-control input-superlg" id='resistor-value' value='4.7K &PlusMinus; 5%'>
+                <input type="text" class="form-control input-superlg" id='resistor-value' value='4.7K &#177; 5%'>
               </form>
               <span class="input-group-addon input-superlg">&#937;</span>
             </div>
