--- a/resistor.html
+++ b/resistor.html
@@ -43,7 +43,7 @@
         <h1>ResistorCalc.net</h1>
         settings [
         <button id='band-mode' type="button" class="btn btn-sm btn-link" data-mode='4band'>Mode: 4 Band</button>
-        <button id='parse-mode' type='button' class='btn btn-sm btn-link' data-mode='real'>Parsing: Real Values</button>
+        <button id='parse-mode' type='button' class='btn btn-sm btn-link' data-mode='fake'>Parsing: Basic Sanitization</button>
         ]
         <!-- four band code calculator(<a href="http://www.allaboutcircuits.com/textbook/reference/chpt-2/resistor-color-codes/">?</a>) -->
       </header>
@@ -52,7 +52,7 @@
         <form id='resistor-form'>
           <div class='row input-row no-gutters'>
             <div class='col-xs-12'>
-              <input type="text" class="form-control input-superlg" id='resistor-value' value='4.7K &#937;'>             
+              <input type="text" class="form-control input-superlg" id='resistor-value' value='4.7k&#937;'>             
             </div>
           </div>
         </form>
