--- a/resistor.html
+++ b/resistor.html
@@ -51,7 +51,7 @@
             <div class='col-xs-12'>
               <button id='band-mode' type="button" class="btn btn-sm btn-default" data-mode='4band' >Mode: 4 Band</button>    
               <button id='real-value' type='button' class='btn btn-sm btn-default' style='display:none'></button>  
-              <span class='btn-sm pull-right' id='series'>Series: E24</span>  
+              <span class='btn-sm pull-right' id='series'><span>Series:</span> E24</span>  
               <input type="text" class="form-control input-superlg" id='resistor-value' value='4.7k&#937;'>      
               <input type="hidden" id='mode-store'>   
             </div>
