default mode store to 4band on pageload

--- a/resistor.html
+++ b/resistor.html
@@ -53,7 +53,7 @@
               <button id='real-value' type='button' class='btn btn-sm btn-default' style='display:none'></button>  
               <span class='btn-sm pull-right' id='series'><span>Series:</span> E24</span>  
               <input type="text" class="form-control input-superlg" id='resistor-value' value='4.7k&#937;'>      
-              <input type="hidden" id='mode-store'>   
+              <input type="hidden" id='mode-store' value='4band'>   
             </div>
           </div>
         </form>
