--- a/resistor.html
+++ b/resistor.html
@@ -14,8 +14,8 @@
     <script src="resistor.js"></script>
     <script src="wiring.js"></script>
 
-    <title>ResistorCalc.net</title>
-    <meta name="description" content="Mobile friendly four band resistor calculator for hobbyists and professionals"/>
+    <title>ResistorCalc.net - 4 and 5 Band Resistor Color Code Calculator</title>
+    <meta name="description" content="Mobile friendly four and five band resistor calculator for hobbyists and professionals."/>
     <meta name="keywords" content="resistor calculator, resister calculator, resistor, resister, resistor color, resistor color code, resistor color bands"/>
     <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1" />
 
