add colors to resistance band

--- a/resistor.html
+++ b/resistor.html
@@ -181,10 +181,10 @@
           <div class='col-md-2'>
             <div class='dropdown-arrow'> ▼ </div>
             <select class="form-control input-verylg color-selector" id="tolerance">
-              <option value='10' style='background-color:silver; color:white;'>&#177;10%</option>
-              <option value='5' selected="selected" style='background-color:gold; color:#333;'>&#177;5%</option>
-              <option value='2' style='background-color:red; color:white;'>&#177;2%</option>
-              <option value='1' style='background-color:brown; color:white;'>&#177;1%</option>
+              <option value='10' style='background-color:silver; color:white;'>Silver (&#177;10%)</option>
+              <option value='5' selected="selected" style='background-color:gold; color:#333;'>Gold (&#177;5%)</option>
+              <option value='2' style='background-color:red; color:white;'>Red (&#177;2%)</option>
+              <option value='1' style='background-color:brown; color:white;'>Brown (&#177;1%)</option>
             </select>
           </div>
         </div>
