fade out color-row when typing new value

--- a/resistor.html
+++ b/resistor.html
@@ -59,7 +59,7 @@
         </form>
 
 
-        <div class='row no-gutters'>
+        <div class='row no-gutters color-row'>
           <div class='col-md-9'>
 
             <row id='4band' class='row no-gutters'>
