--- a/resistor.html
+++ b/resistor.html
@@ -52,7 +52,7 @@
               <button id='band-mode' type="button" class="btn btn-sm btn-default" data-mode='4band' >Mode: 4 Band</button>    
               <button id='real-value' type='button' class='btn btn-sm btn-default' style='display:none'></button>  
               <span class='btn-sm pull-right' id='series'><span>Series:</span> E24</span>  
-              <input type="text" class="form-control input-superlg" id='resistor-value' value='4.7k&#937;'>      
+              <input type="text" class="form-control input-superlg" id='resistor-value' value='4.7k&#937;' spellcheck="false">      
               <input type="hidden" id='mode-store' value='4band'>   
             </div>
           </div>
